Edição no banco de dados

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                     readonly
                 />
             </section>
+            <section>
+                <h3>Exibe Banco de Dados</h3>
+                <input type="button" value="Exibir!" onclick="exibeBD()" />
+                <div id="lista-bd"></div>
+            </section>
         </main>
     </body>
 </html>
