Funções para edição e exclusão de dados do BD

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                 <input type="button" value="Exibir!" onclick="exibeBD()" />
                 <div id="lista-bd"></div>
             </section>
+
+            <section>
+                <h3>Altera BD</h3>
+                <input type="text" id="nome-alteracao" placeholder="Nome" />
+                <input type="number" id="idade-alteracao" placeholder="Idade" />
+                <button onclick="alteraInfo()">Alterar!</button>
+                <button onclick="excluiInfo()">Excluir!</button>
+            </section>
         </main>
     </body>
 </html>
