colunas JSON no BD

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
                 <h3>Registro BD</h3>
                 <input type="text" id="nome-usuario" placeholder="Nome" />
                 <input type="number" id="idade-usuario" placeholder="Idade" />
+                <input type="number" id="altura-usuario" placeholder="Altura" />
+                <input
+                    type="date"
+                    id="data-nasc-usuario"
+                    placeholder="Data de Nascimento"
+                />
+                <input type="email" id="email-usuario" placeholder="E-mail" />
+                <input
+                    type="tel"
+                    id="telefone-usuario"
+                    placeholder="Telefone"
+                />
                 <input type="button" value="Salvar!" onclick="salvarInfo()" />
             </section>
             <section>
@@ -62,7 +74,7 @@
 
             <section>
                 <h3>Altera BD</h3>
-                <input type="text" id="nome-alteracao" placeholder="Nome" />
+                <input type="text" id=" " placeholder="Nome" />
                 <input type="number" id="idade-alteracao" placeholder="Idade" />
                 <button onclick="alteraInfo()">Alterar!</button>
                 <button onclick="excluiInfo()">Excluir!</button>
